--- a/contract/package.json
+++ b/contract/package.json
@@ -1,8 +1,11 @@
 {
+  "type": "module",
   "dependencies": {
     "@agoric/deploy-script-support": "^0.10.4-u18a.0",
+    "@agoric/internal": "^0.4.0-u18a.0",
     "@agoric/orchestration": "^0.2.0-u18a.0",
     "@agoric/zoe": "^0.26.3-u18a.0",
+    "@endo/errors": "^1.2.9",
     "@endo/far": "^1.1.10",
     "@endo/patterns": "^1.4.8"
   },
