--- a/contract/package.json
+++ b/contract/package.json
@@ -1,13 +1,39 @@
 {
   "type": "module",
+  "devDependencies": {
+    "@agoric/async-flow": "^0.1.0",
+    "@agoric/deploy-script-support": "^0.10.4-u17.1",
+    "@agoric/eslint-config": "^0.4.1-u17.1",
+    "@agoric/inter-protocol": "^0.17.0-u17.1",
+    "@agoric/smart-wallet": "^0.5.4-u17.1",
+    "@agoric/store": "^0.9.3-u17.1",
+    "@agoric/time": "^0.3.3-u17.1",
+    "@agoric/vat-data": "^0.5.3-u17.1",
+    "@agoric/vow": "^0.2.0-u17.1",
+    "@agoric/zone": "^0.3.0-u17.1",
+    "@endo/eslint-plugin": "^2.2.0",
+    "@endo/nat": "^5.0.9",
+    "@endo/promise-kit": "^1.1.4",
+    "@endo/ses-ava": "^1.2.2",
+    "@types/fs-extra": "^11",
+    "@types/node": "^20.11.13",
+    "agoric": "^0.22.0-u17.1",
+    "ava": "^5.3.1"
+  },
   "dependencies": {
-    "@agoric/deploy-script-support": "^0.10.4-u18a.0",
-    "@agoric/internal": "^0.4.0-u18a.0",
     "@agoric/orchestration": "^0.2.0-u18a.0",
-    "@agoric/zoe": "^0.26.3-u18a.0",
-    "@endo/errors": "^1.2.9",
-    "@endo/far": "^1.1.10",
-    "@endo/patterns": "^1.4.8"
+    "@agoric/ertp": "^0.16.3-u17.1",
+    "@agoric/governance": "^0.10.4-u17.1",
+    "@agoric/internal": "^0.4.0-u17.1",
+    "@agoric/store": "^0.9.3-u17.1",
+    "@agoric/vats": "^0.16.0-u17.1",
+    "@agoric/zoe": "^0.26.3-u17.1",
+    "@endo/bundle-source": "^3.4.0",
+    "@endo/errors": "^1.2.4",
+    "@endo/far": "^1.1.4",
+    "@endo/init": "^1.1.3",
+    "@endo/marshal": "^1.5.2",
+    "@endo/patterns": "^1.4.2"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
