--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@axelar-network/axelarjs-sdk": "^0.17.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "ethers": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
