--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,8 @@
     "@vitejs/plugin-react": "^4.3.1",
     "ethers": "^5.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@agoric/rpc": "0.9.1-dev-f471a83.0",
