--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "make:bundles": "agoric run contract/proposal/init-axelar-gmp.js",
-    "deploy:contract": "bash deploy.sh startAxelarGmp-plan.json",
+    "deploy:contract": "cd plan-axelar-gmp && bash deploy.sh startAxelarGmp-plan.json",
     "start:ui": "cd ui && yarn dev",
     "start:relayer": "cd hermes && bash run-relayer.sh",
     "register:ausdc": "cd plan-ausdc && bash deploy.sh eval-register-interchain-bank-assets-plan.json",
