--- a/contract/package.json
+++ b/contract/package.json
@@ -5,12 +5,11 @@
     "deploy": "agoric run proposal/init-axelar-gmp.js && bash deploy.sh startAxelarGmp-plan.json"
   },
   "devDependencies": {
-    "@agoric/async-flow": "^0.1.0",
+    "@agoric/async-flow": "^0.2.0-u18a.0",
     "@agoric/deploy-script-support": "^0.10.4-u17.1",
     "@agoric/vow": "^0.2.0-u17.1",
     "@agoric/zone": "^0.3.0-u17.1",
-    "agoric": "^0.22.0-u17.1",
-    "ava": "^5.3.1"
+    "agoric": "^0.22.0-u17.1"
   },
   "dependencies": {
     "@agoric/orchestration": "^0.2.0-u18a.0",
