chore: use workspaces in package.json

--- a/contract/package.json
+++ b/contract/package.json
@@ -1,5 +1,7 @@
 {
   "name": "orchestration-contract",
+  "private": true,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "deploy": "agoric run proposal/init-axelar-gmp.js && bash deploy.sh startAxelarGmp-plan.json"
