include evm contracts and deployment setup

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "useWorkspaces": true,
   "workspaces": [
     "contract",
-    "ui"
+    "ui",
+    "evm"
   ],
   "keywords": [],
   "author": "",
