--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
 node_modules
-# startAxelarGmp.js
-# startAxelarGmp-plan.json
-# startAxelarGmp-permit.json
+startAxelarGmp.js
+startAxelarGmp-plan.json
+startAxelarGmp-permit.json
 .env
+
+# Hardhat files
+evm/cache
+evm/artifacts
+
+# TypeChain files
+evm/typechain
+evm/typechain-types
+
+# solidity-coverage files
+evm/coverage
+evm/coverage.json
+
+# Hardhat Ignition default folder for deployments against a local node
+evm/ignition/deployments
