--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@ node_modules
 startAxelarGmp.js
 startAxelarGmp-plan.json
 startAxelarGmp-permit.json
+
+eval-register-interchain-bank-assets-permit.json
+eval-register-interchain-bank-assets-plan.json
+eval-register-interchain-bank-assets.js
+
 .env
 
 # Hardhat files
