--- a/evm/package.json
+++ b/evm/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "compile": "hardhat compile",
     "deploy-fuji": "./scripts/deploy.sh fuji",
     "deploy-base": "./scripts/deploy.sh base"
   },
@@ -21,6 +22,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@openzeppelin/contracts": "^5.1.0",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "chai": "^4.2.0",
@@ -28,8 +30,11 @@
     "hardhat": "^2.22.17",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
-    "typechain": "^8.3.0",
-    "@openzeppelin/contracts": "^5.1.0",
-    "solmate": "^6.8.0"
+    "solmate": "^6.8.0",
+    "typechain": "^8.3.0"
+  },
+  "dependencies": {
+    "@aave/core-v3": "^1.19.3",
+    "@aave/periphery-v3": "^2.5.2"
   }
 }
