--- a/ui/package.json
+++ b/ui/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@axelar-network/axelarjs-sdk": "^0.17.1",
+    "@tanstack/react-query": "^5.66.9",
     "@vitejs/plugin-react": "^4.3.1",
     "ethers": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^11.0.3",
-    "viem": "~1.16.5",
-    "wagmi": "1.4.1"
+    "viem": "^2.23.5",
+    "wagmi": "^2.14.12"
   },
   "devDependencies": {
     "@agoric/rpc": "0.9.1-dev-f471a83.0",
