--- a/contract/package.json
+++ b/contract/package.json
@@ -5,19 +5,20 @@
   "type": "module",
   "devDependencies": {
     "@agoric/async-flow": "^0.2.0-u18a.0",
-    "@agoric/deploy-script-support": "^0.10.4-u17.1",
-    "@agoric/vow": "^0.2.0-u17.1",
-    "@agoric/zone": "^0.3.0-u17.1",
+    "@agoric/deploy-script-support": "^0.10.4-u19.1",
     "agoric": "^0.22.0-u17.1"
   },
   "dependencies": {
-    "@agoric/orchestration": "^0.2.0-u18a.0",
-    "@agoric/internal": "^0.4.0-u17.1",
+    "@agoric/internal": "^0.4.0-u19.1",
+    "@agoric/orchestration": "^0.2.0-u19.1",
     "@agoric/vats": "^0.16.0-u17.1",
     "@agoric/zoe": "^0.26.3-u17.1",
-    "@endo/errors": "^1.2.4",
+    "@endo/base64": "^1.0.9",
+    "@endo/errors": "^1.2.9",
     "@endo/far": "^1.1.4",
-    "@endo/patterns": "^1.4.2"
+    "@endo/patterns": "^1.4.8",
+    "@agoric/vow": "^0.2.0-u17.1",
+    "@agoric/zone": "^0.3.0-u17.1"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
