--- a/evm/package.json
+++ b/evm/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "compile": "hardhat compile",
     "deploy-fuji": "./scripts/deploy.sh fuji",
-    "deploy-base": "./scripts/deploy.sh base"
+    "deploy-base": "./scripts/deploy.sh base",
+    "deploy-eth": "npx hardhat ignition deploy ./ignition/modules/deploySafeFactory.cjs --network sepolia"
   },
   "keywords": [],
   "author": "",
