--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@axelar-network/axelarjs-sdk": "^0.17.1",
+    "@safe-global/protocol-kit": "^5.2.4",
     "@tanstack/react-query": "^5.66.9",
     "@vitejs/plugin-react": "^4.3.1",
     "ethers": "^5.7.0",
