--- a/contract/package.json
+++ b/contract/package.json
@@ -18,7 +18,9 @@
     "@endo/far": "^1.1.4",
     "@endo/patterns": "^1.4.8",
     "@agoric/vow": "^0.2.0-u17.1",
-    "@agoric/zone": "^0.3.0-u17.1"
+    "@agoric/zone": "^0.3.0-u17.1",
+    "@ethersproject/bytes": "^5.8.0",
+    "@findeth/abi": "^0.7.1"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
