--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ eval-register-interchain-bank-assets.js
 .env
 
 # Hardhat files
-evm/cache
-evm/artifacts
+cache
+artifacts
 
 # TypeChain files
 evm/typechain
@@ -24,3 +24,4 @@ evm/coverage.json
 # Hardhat Ignition default folder for deployments against a local node
 evm/ignition/deployments
 .qodo
+dist
