feat: make evm smart wallet

--- a/.github/workflows/axelar-gmp.yml
+++ b/.github/workflows/axelar-gmp.yml
@@ -1,18 +1,26 @@
-name: PR
+name: Axelar GMP tests
 
 on:
   pull_request:
   push:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to clone from agoric-to-axelar-local'
+        required: false
+        default: 'main'
 
 concurrency:
-  group: pr-${{ github.head_ref }}
+  group: ${{ github.workflow }}-${{ github.head_ref }}
   cancel-in-progress: true
 
 jobs:
-  test:
+  axelar-gmp:
     runs-on: ubuntu-latest
+    env:
+      HOME: /home/runner/work
 
     steps:
       - name: Checkout this repo
@@ -26,33 +34,41 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Install docker-compose
+      - name: Install Docker Compose
         run: |
-          cd contract
-          yarn install
+          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
 
-      - name: Run contract tests
+      - name: Setup Rust
         run: |
-          cd contract
-          yarn test
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          source $HOME/.cargo/env
+          rustup default stable
 
-      - name: Run lint check
+      - name: Determine branch name
+        id: set-branch
         run: |
-          git clone --branch "${{ steps.set-branch.outputs.branch }}" https://github.com/agoric-labs/agoric-to-axelar-local.git
+          echo "branch=${{ github.event.inputs.branch || 'main' }}" >> "$GITHUB_OUTPUT"
 
-      - name: Install dependencies
+      - name: Clone agoric-to-axelar-local
         run: |
-          cd agoric-to-axelar-local
-          npm install
+          git clone --branch "${{ steps.set-branch.outputs.branch }}" \
+            https://github.com/agoric-labs/agoric-to-axelar-local.git \
+            "$HOME/agoric-to-axelar-local"
 
-      - name: Build project
-        run: |
-          cd agoric-to-axelar-local
-          npm run build
+      - name: Install agoric-to-axelar-local dependencies
+        working-directory: ${{ env.HOME }}/agoric-to-axelar-local
+        run: npm install
+
+      - name: Build agoric-to-axelar-local
+        working-directory: ${{ env.HOME }}/agoric-to-axelar-local
+        run: npm run build
 
       - name: Start Chains and set Relayer
+        working-directory: ${{ env.HOME }}/agoric-to-axelar-local
         run: |
-          cd agoric-to-axelar-local/packages/axelar-local-dev-cosmos
+          cd packages/axelar-local-dev-cosmos
           npm run start
 
       - name: Prepare Env
@@ -83,4 +99,21 @@ jobs:
         env:
           vStorageUrl: http://localhost/agoric-lcd/agoric/vstorage/data/published.agoricNames.instance
           valueToFind: axelarGmp
+          waitInSeconds: 30
+
+      - name: Make offer for creating EVM Smart Wallet
+        run: ./scripts/make-account.mjs
+        env:
+          makeAccount: true
+
+      - name: Relay data from EVM chain
+        working-directory: ${{ env.HOME }}/agoric-to-axelar-local
+        run: |
+          cd packages/axelar-local-dev-cosmos
+          npm run relay &
+          sleep 60
+
+      - name: Get EVM Smart wallet address
+        run: ./scripts/make-account.mjs
+        env:
           waitInSeconds: 30
