--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "private": true,
   "useWorkspaces": true,
   "workspaces": [
-    "ui",
-    "evm",
-    "scripts"
+    "evm"
   ],
   "prettier": {
     "semi": true,
@@ -27,5 +25,11 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "devDependencies": {
+    "@agoric/client-utils": "^0.2.0-u19.2",
+    "@agoric/internal": "^0.4.0-u19.2",
+    "execa": "^9.5.2",
+    "ses": "^1.12.0"
+  }
 }
