--- a/evm/package.json
+++ b/evm/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "compile": "hardhat compile",
     "deploy-fuji": "./scripts/deploy.sh fuji",
-    "deploy-base": "./scripts/deploy.sh base"
+    "deploy-base": "./scripts/deploy.sh base",
+    "test": "hardhat test",
+    "build": "rm -rf artifacts && hardhat clean && hardhat compile"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,8 @@
   "description": "",
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
-    "@axelar-network/axelar-gmp-sdk-solidity": "^6.0.4",
+    "@axelar-network/axelar-cgp-solidity": "^6.4.0",
+    "@axelar-network/axelar-gmp-sdk-solidity": "^5.10.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
@@ -27,6 +30,7 @@
     "@typechain/hardhat": "^9.0.0",
     "chai": "^4.2.0",
     "dotenv": "^16.4.7",
+    "ethers": "^6.1.0",
     "hardhat": "^2.22.17",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
