--- a/.github/workflows/axelar-gmp.yml
+++ b/.github/workflows/axelar-gmp.yml
@@ -1,4 +1,4 @@
-name: Axelar GMP tests
+name: Axelar GMP Integration Tests
 
 on:
   pull_request:
@@ -17,7 +17,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  axelar-gmp:
+  integration:
     runs-on: ubuntu-latest
     env:
       HOME: /home/runner/work
@@ -120,5 +120,10 @@ jobs:
 
       - name: Get EVM Smart wallet address
         run: ./integration/scripts/make-account.mjs
+        env:
+          waitInSeconds: 30
+
+      - name: Send GMP via the LCA
+        run: ./integration/scripts/gmp-via-lca.mjs
         env:
           waitInSeconds: 30
