--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
   },
   "private": true,
   "useWorkspaces": true,
-  "workspaces": [
-    "evm"
-  ],
   "prettier": {
     "semi": true,
     "singleQuote": true,
@@ -30,6 +27,7 @@
     "@agoric/client-utils": "^0.2.0-u19.2",
     "@agoric/internal": "^0.4.0-u19.2",
     "execa": "^9.5.2",
+    "prettier": "^3.5.3",
     "ses": "^1.12.0"
   }
 }
