--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,6 +26,16 @@ jobs:
       - name: Install root dependencies
         run: yarn install
 
+      - name: Install dependencies in contract/
+        run: |
+          cd contract
+          yarn install
+
+      - name: Install dependencies in deploy/
+        run: |
+          cd deploy
+          yarn install
+
       - name: Run contract tests
         run: |
           cd deploy
