--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
-  "name": "agoric-orchestration",
+  "name": "dapp-evm",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "make:bundles": "agoric run contract/proposal/init-axelar-gmp.js",
-    "deploy:contract": "bash deploy.sh startAxelarGmp-plan.json",
     "start:ui": "cd ui && yarn dev",
-    "start:relayer": "cd hermes && bash run-relayer.sh",
-    "register:token": "bash deploy.sh eval-register-interchain-bank-assets-plan.json",
     "lint": "prettier . --check",
     "lint:fix": "prettier . --write"
   },
   "private": true,
   "useWorkspaces": true,
-  "workspaces": [
-    "contract",
-    "deploy",
-    "integration"
-  ],
   "prettier": {
     "semi": true,
     "singleQuote": true,
