--- a/integration/package.json
+++ b/integration/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "prepare-env": "CONTRACT_FOLDER=../contract node scripts/prepare-env.mjs",
-    "register:token": "script=scripts/register-interchain-bank-assets.builder.js plan=scripts/eval-register-interchain-bank-assets-plan.json assets='[{\"denom\":\"ibc/2CC0B1B7A981ACC74854717F221008484603BB8360E81B262411B0D830EDE9B0\",\"issuerName\":\"AXL\",\"decimalPlaces\":6}]' node scripts/deploy-contract.mjs",
+    "prepare-env": "CONTRACT_FOLDER=../contract DEPLOY_FOLDER=../deploy node scripts/prepare-env.mjs",
+    "register:token": "script=/usr/src/agoric-sdk/multichain-testing/src/register-interchain-bank-assets.builder.js plan=/usr/src/upgrade-test-scripts/eval-register-interchain-bank-assets-plan.json assets='[{\"denom\":\"ibc/2CC0B1B7A981ACC74854717F221008484603BB8360E81B262411B0D830EDE9B0\",\"issuerName\":\"AXL\",\"decimalPlaces\":6}]' node scripts/deploy-contract.mjs",
     "check-token": "vStorageUrl=http://localhost/agoric-lcd/agoric/vstorage/data/published.agoricNames.vbankAsset valueToFind=ibc/2CC0B1B7A981ACC74854717F221008484603BB8360E81B262411B0D830EDE9B0 waitInSeconds=30 node scripts/check-vstorage.mjs",
     "deploy:contract": "script=scripts/init-axelar-gmp.js plan=scripts/startAxelarGmp-plan.json node scripts/deploy-contract.mjs",
     "check-axelar-gmp": "vStorageUrl=http://localhost/agoric-lcd/agoric/vstorage/data/published.agoricNames.instance valueToFind=axelarGmp waitInSeconds=30 node scripts/check-vstorage.mjs",
