chore: update buildGMPPayload to support multicall

--- a/contract/package.json
+++ b/contract/package.json
@@ -7,7 +7,8 @@
     "@agoric/async-flow": "^0.2.0-u19.2",
     "@agoric/vats": "^0.16.0-u19.2",
     "@agoric/zoe": "^0.27.0-u19.2",
-    "@agoric/zone": "^0.3.0-u19.2"
+    "@agoric/zone": "^0.3.0-u19.2",
+    "patch-package": "^8.0.0"
   },
   "dependencies": {
     "@agoric/internal": "^0.4.0-u19.2",
@@ -17,9 +18,13 @@
     "@endo/errors": "^1.2.10",
     "@endo/far": "^1.1.11",
     "@endo/patterns": "^1.5.0",
+    "@ethersproject/abi": "^5.7.0",
     "@ethersproject/bytes": "^5.8.0",
     "@findeth/abi": "^0.7.1",
-    "js-sha3": "^0.9.3"
+    "viem": "^2.27.2"
+  },
+  "resolutions": {
+    "**/bn.js": "5.2.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
