--- a/solidity/package.json
+++ b/solidity/package.json
@@ -33,7 +33,8 @@
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
     "solmate": "^6.8.0",
-    "typechain": "^8.3.0"
+    "typechain": "^8.3.0",
+    "viem": "^2.28.0"
   },
   "dependencies": {
     "@aave/core-v3": "^1.19.3",
