--- a/deploy/package.json
+++ b/deploy/package.json
@@ -45,7 +45,7 @@
     "@endo/errors": "^1.2.10",
     "@endo/far": "^1.1.11",
     "ava": "^5.3.0",
-    "ethers": "5.7.2",
-    "node-fetch-cache": "^5.0.2"
+    "node-fetch-cache": "^5.0.2",
+    "viem": "^2.27.2"
   }
 }
