--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -125,5 +125,6 @@ jobs:
 
       - name: Send GMP via the LCA
         run: ./integration/scripts/gmp-via-lca.mjs
-        env:
-          waitInSeconds: 30
+
+      - name: MultiCall
+        run: ./integration/scripts/multicall.mjs
