chore: initial changes for using workspaces

--- a/deploy/package.json
+++ b/deploy/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "@agoric/cosmic-swingset": "0.41.4-dev-0e6a9f4.0",
     "@agoric/internal": "^0.4.0-u19.2",
-    "@agoric/orchestration": "0.1.1-dev-9f21b9d.0",
+    "@agoric/orchestration": "dev",
     "@agoric/swingset-vat": "^0.33.0-u19.2",
     "@agoric/telemetry": "^0.6.3-u19.2",
     "@agoric/xsnap": "^0.14.3-u19.2",
@@ -48,6 +48,6 @@
     "@endo/far": "^1.1.11",
     "ava": "^5.3.0",
     "node-fetch-cache": "^5.0.2",
-    "viem": "^2.27.2"
+    "viem": "^2.28.1"
   }
 }
