--- a/contract/package.json
+++ b/contract/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@agoric/internal": "^0.4.0-u19.2",
-    "@agoric/orchestration": "^0.2.0-u19.2",
+    "@agoric/orchestration": "dev",
     "@agoric/vow": "^0.2.0-u19.2",
     "@endo/base64": "^1.0.9",
     "@endo/errors": "^1.2.10",
     "@endo/far": "^1.1.11",
     "@endo/patterns": "^1.5.0",
-    "viem": "^2.27.2"
+    "viem": "^2.28.1"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
