--- a/ui/package.json
+++ b/ui/package.json
@@ -12,15 +12,14 @@
     "@axelar-network/axelarjs-sdk": "^0.17.1",
     "@tanstack/react-query": "^5.66.9",
     "@vitejs/plugin-react-swc": "^3.8.1",
-    "ethers": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^11.0.3",
-    "viem": "^2.23.5",
+    "viem": "^2.28.1",
     "wagmi": "^2.14.12"
   },
   "devDependencies": {
-    "@agoric/rpc": "0.9.1-dev-f471a83.0",
+    "@agoric/rpc": "dev",
     "@agoric/web-components": "^0.15.0",
     "ses": "1.3.0",
     "typescript": "^5.0.2",
