chore: apply patch for bech32 import

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "local-env:relay": "cd local-env && yarn relay",
     "deploy:token": "cd deploy && yarn register:token",
     "deploy:contract": "cd deploy && yarn deploy",
-    "deploy:contracts": "yarn deploy:token && yarn deploy:contract"
+    "deploy:contracts": "yarn deploy:token && yarn deploy:contract",
+    "postinstall": "patch-package"
   },
   "private": true,
   "useWorkspaces": true,
@@ -37,6 +38,7 @@
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
     "concurrently": "^9.1.2",
+    "patch-package": "^8.0.0",
     "prettier": "^3.5.3"
   }
 }
