--- a/ui/package.json
+++ b/ui/package.json
@@ -19,7 +19,7 @@
     "wagmi": "^2.14.12"
   },
   "devDependencies": {
-    "@agoric/rpc": "dev",
+    "@agoric/rpc": "0.9.1-dev-f471a83.0",
     "@agoric/web-components": "^0.15.0",
     "ses": "1.3.0",
     "typescript": "^5.0.2",
