--- a/contract/package.json
+++ b/contract/package.json
@@ -4,15 +4,15 @@
   "version": "1.0.0",
   "type": "module",
   "devDependencies": {
-    "@agoric/async-flow": "^0.2.0-u19.2",
-    "@agoric/vats": "^0.16.0-u19.2",
-    "@agoric/zoe": "^0.27.0-u19.2",
-    "@agoric/zone": "^0.3.0-u19.2"
+    "@agoric/async-flow": "dev",
+    "@agoric/vats": "dev",
+    "@agoric/zoe": "dev",
+    "@agoric/zone": "dev"
   },
   "dependencies": {
-    "@agoric/internal": "^0.4.0-u19.2",
+    "@agoric/internal": "dev",
     "@agoric/orchestration": "dev",
-    "@agoric/vow": "^0.2.0-u19.2",
+    "@agoric/vow": "dev",
     "@endo/base64": "^1.0.9",
     "@endo/errors": "^1.2.10",
     "@endo/far": "^1.1.11",
