--- a/ui/package.json
+++ b/ui/package.json
@@ -19,8 +19,8 @@
     "wagmi": "^2.14.12"
   },
   "devDependencies": {
-    "@agoric/rpc": "0.9.1-dev-f471a83.0",
-    "@agoric/web-components": "^0.15.0",
+    "@agoric/rpc": "dev",
+    "@agoric/web-components": "dev",
     "ses": "1.3.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
