--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,17 +26,14 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
+      - name: Setup local-env
+        run: cd local-env && yarn install
+
       - name: Build project
         run: yarn build
 
-      - name: Run contract tests
-        run: cd deploy && yarn test
-
-      - name: Build solidity contracts
-        run: cd solidity && CI=true yarn build
-
-      - name: Run tests for solidity contracts
-        run: cd solidity && yarn test
+      - name: Run tests
+        run: yarn test
 
       - name: Run lint check
         run: yarn lint
