--- a/contract/package.json
+++ b/contract/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@agoric/internal": "dev",
-    "@agoric/orchestration": "dev",
+    "@agoric/orchestration": "^0.2.0-u20.0",
     "@agoric/vow": "dev",
     "@endo/base64": "^1.0.9",
     "@endo/errors": "^1.2.10",
