--- a/deploy/package.json
+++ b/deploy/package.json
@@ -40,7 +40,7 @@
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "dependencies": {
     "@agoric/cosmic-swingset": "dev",
-    "@agoric/internal": "dev",
+    "@agoric/internal": "^0.4.0-u20.0",
     "@agoric/orchestration": "^0.2.0-u20.0",
     "@agoric/swingset-vat": "dev",
     "@agoric/telemetry": "dev",
