--- a/deploy/package.json
+++ b/deploy/package.json
@@ -44,9 +44,9 @@
     "@agoric/orchestration": "^0.2.0-u20.0",
     "@agoric/swingset-vat": "dev",
     "@agoric/telemetry": "dev",
-    "@agoric/vats": "dev",
+    "@agoric/vats": "^0.16.0-u20.0",
     "@agoric/xsnap": "dev",
-    "@agoric/zoe": "dev",
+    "@agoric/zoe": "^0.27.0-u20.0",
     "@endo/errors": "^1.2.10",
     "@endo/far": "^1.1.11",
     "ava": "^5.3.0",
