--- a/contract/package.json
+++ b/contract/package.json
@@ -7,7 +7,8 @@
     "@agoric/async-flow": "^0.2.0-u20.0",
     "@agoric/vats": "^0.16.0-u20.0",
     "@agoric/zoe": "^0.27.0-u20.0",
-    "@agoric/zone": "^0.3.0-u20.0"
+    "@agoric/zone": "^0.3.0-u20.0",
+    "typescript": "~5.8.2"
   },
   "dependencies": {
     "@agoric/internal": "^0.4.0-u20.0",
