--- a/ui/package.json
+++ b/ui/package.json
@@ -22,7 +22,7 @@
     "@agoric/rpc": "^0.10.0",
     "@agoric/web-components": "^0.16.0",
     "ses": "1.3.0",
-    "typescript": "^5.0.2",
+    "typescript": "~5.8.2",
     "vite": "^4.4.5",
     "vitest": "^1.2.1",
     "zustand": "^4.4.1"
