ci: type check contract

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Build project
         run: yarn build
 
+      - name: Type Check contract/
+        run: cd contract && yarn lint:types
+
       - name: Run tests
         run: yarn test
 
