--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "prettier . --check",
     "lint:fix": "prettier . --write",
     "test": "yarn workspace deploy test && yarn workspace solidity test",
-    "lint:types": "yarn workspace deploy lint:types && yarn workspace contract lint:types",
+    "lint:types": "yarn workspace deploy lint:types && yarn workspace contract lint:types && yarn workspace solidity lint:types",
     "build:solidity": "cd solidity && yarn build",
     "build:deploy": "cd deploy && yarn build",
     "build:local-env": "cd local-env && yarn build",
