--- a/solidity/package.json
+++ b/solidity/package.json
@@ -2,42 +2,36 @@
   "name": "solidity",
   "private": true,
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
     "compile": "hardhat compile",
-    "deploy-fuji": "./scripts/deploy.sh fuji",
-    "deploy-base": "./scripts/deploy.sh base",
     "test": "hardhat test",
-    "build": "rm -rf artifacts && hardhat clean && hardhat compile"
+    "build": "rm -rf artifacts && hardhat clean && hardhat compile",
+    "lint:types": "tsc"
   },
-  "keywords": [],
-  "license": "ISC",
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
-    "@axelar-network/axelar-cgp-solidity": "^6.4.0",
-    "@axelar-network/axelar-gmp-sdk-solidity": "^5.10.0",
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@aave/core-v3": "^1.19.3",
+    "@aave/periphery-v3": "^2.5.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.11",
     "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
-    "@openzeppelin/contracts": "^5.1.0",
+    "@nomicfoundation/ignition-core": "^0.15.11",
+    "@openzeppelin/contracts": "^5.3.0",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
-    "chai": "^4.2.0",
-    "dotenv": "^16.4.7",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": "^10.0.10",
+    "dotenv": "^16.5.0",
     "ethers": "^6.1.0",
-    "hardhat": "^2.22.17",
+    "hardhat": "^2.23.0",
     "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.8.0",
+    "solidity-coverage": "^0.8.1",
     "solmate": "^6.8.0",
+    "ts-node": "^10.9.2",
     "typechain": "^8.3.0",
-    "viem": "^2.28.1"
-  },
-  "dependencies": {
-    "@aave/core-v3": "^1.19.3",
-    "@aave/periphery-v3": "^2.5.2"
+    "typescript": "~5.8.2"
   }
 }
