--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@agoric/rpc": "^0.10.0",
     "@agoric/web-components": "^0.16.0",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
     "ses": "1.3.0",
     "typescript": "~5.8.2",
     "vite": "^4.4.5",
