--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint:types": "yarn workspace deploy lint:types && yarn workspace contract lint:types && yarn workspace solidity lint:types",
     "build:solidity": "cd solidity && yarn build",
     "build:deploy": "cd deploy && yarn build",
+    "build:ui": "cd ui && yarn build",
     "build:local-env": "cd local-env && yarn build",
-    "build": "concurrently \"yarn build:solidity\" \"yarn build:deploy\" \"yarn build:local-env\"",
+    "build": "concurrently \"yarn build:solidity\" \"yarn build:deploy\" \"yarn build:local-env\" \"yarn build:ui\"",
     "local-env:start": "cd local-env && yarn start",
     "local-env:relay": "cd local-env && yarn relay",
     "deploy:token": "cd deploy && yarn register:token",
