--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "@agoric/web-components": "^0.16.0",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
+    "cosmjs-types": "^0.9.0",
     "ses": "1.3.0",
     "typescript": "~5.8.2",
     "vite": "^4.4.5",
