--- a/deploy/package.json
+++ b/deploy/package.json
@@ -12,8 +12,8 @@
   },
   "scripts": {
     "esbuild:contract": "esbuild ../contract/src/axelar-gmp.contract.js --platform=node --format=esm --bundle --outfile=dist/axelar-gmp.contract.bundle.js",
-    "generate-bundles": "agoric run src/init-contract.js --net=axelar-local --peer=axelar:connection-0:channel-9:uaxl",
-    "build:contract": "yarn esbuild:contract && yarn generate-bundles",
+    "bundles:local-env": "agoric run src/init-contract.js --net=local --peer=axelar:connection-0:channel-0:uaxl",
+    "build:contract": "yarn esbuild:contract && yarn bundles:local-env",
     "build:token": "agoric run ./asset-builder/register-interchain-bank-assets.builder.js --assets='[{\"denom\":\"ibc/2CC0B1B7A981ACC74854717F221008484603BB8360E81B262411B0D830EDE9B0\",\"issuerName\":\"AXL\",\"decimalPlaces\":6}]'",
     "build": "yarn build:contract && yarn build:token",
     "test": "yarn esbuild:contract && ava",
